--- a/src/App.css
+++ b/src/App.css
@@ -511,6 +511,230 @@ a {
   margin-top: 1%;
 }
 
+@media (min-width:300px){
+
+
+
+  .nav {
+    display: inline-block;
+    height: 50%;
+    text-align: center;
+    width: 100%;
+  }
+
+  .nav-links li {
+    margin-top: 3%;
+    font-size:1rem;
+  }
+
+  .carmslogo {
+    margin-top: 3%;
+    height: 15vh;
+  }
+
+  .nav-links {
+    display: inline-block;
+    position: relative;
+    top: 4%;
+  }
+  .container-img {
+    height:90vh;
+  }
+  .button-container{
+  
+    max-width:50%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:6%;
+  }
+  .cta-menu {
+    padding: 2px 4px !important;
+
+  }
+  .anim-h1 {
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+
+  .anim-p {
+    font-size: 1rem;
+  }
+
+  .anim-p2 {
+    font-size: 1rem;
+  }
+
+  .anim-p3 {
+    font-size: 1rem;
+  }
+
+  .reservations {
+    font-size: 1.8rem !important;
+  }
+
+  .parag{
+    font-size:1rem;
+    font-weight:600;
+  }
+
+  .paragraph {
+    font-size: 1rem;
+    font-weight: 100%;
+    line-height: 1.5;
+  }
+
+  
+  .btn{
+    padding:12px 12px !important;
+    margin-top:4%;
+  }
+  .item {
+    font-size: 1.4rem;
+  }
+
+  .meal {
+    color: #e2725b;
+    margin-top: 3%;
+    text-align: center;
+    font-family: Italianno;
+    font-size: 1.6rem;
+  }
+
+  table th {
+    padding: 3rem;
+    color: grey;
+  }
+
+  table td {
+    padding: 10px;
+    font-weight: bold;
+    font-family: Italianno;
+    font-size: 2.3rem;
+    color: #f7e7ce;
+  }
+
+  .wine-heading {
+    font-size: 3.5rem;
+  }
+
+  .reservation-form input {
+    width: 40%;
+  }
+
+  .reservations-container {
+    height: 20vh;
+  }
+
+  .reservations {
+    font-size: 3rem;
+    background: #f7e7ce;
+  }
+
+  .background {
+    height: 205vh;
+  }
+
+  .container {
+    background-repeat: no-repeat cover;
+    background-size: cover;
+    height: 130vh;
+    font-size: 2rem;
+    margin-top: 0;
+  }
+  .form-div .reservation-form {
+    display: flex column;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+    margin-top: 4%;
+    width: 100%;
+  }
+
+  .div-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4%;
+  }
+
+  .div-button button {
+    padding: 22px 100px;
+    border-radius: 15px;
+    background: #e2725b;
+    opacity: 0.7;
+    color: beige;
+  }
+
+ 
+  .footer-name{
+    font-size:1.2rem;
+    
+  }
+  .footer-hours{
+    font-size:1rem;
+  }
+
+  .copyright{
+    font-size:1.2rem;
+  }
+
+  .footer-number{
+    font-size:1.2rem;
+  }
+
+  .footer-contact{
+    font-size:1.1rem;
+  }
+
+  .carms {
+    display: flex column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .ant-table-cell {
+    font-size: 1.6rem;
+    font-weight: 400;
+  }
+
+  .about {
+    font-family: Italianno, serif;
+    font-weight: bold;
+    font-size: 5rem;
+    text-align: center;
+    margin-top: 4%;
+    color: #99324c;
+  }
+
+  .img {
+    border-radius: 50%;
+    max-height: 40vh;
+  }
+
+  .about {
+    font-size: 4rem;
+  }
+
+  .about-paragraph {
+    margin-top: 4%;
+    font-weight: 400;
+    font-family: Italianna serif;
+    font-size: 1.2rem;
+  }
+
+  .item-section {
+    font-family: Italiana, serif;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 1.8rem;
+    color: #fadeb6;
+    text-align: center;
+    margin-top: 3%;
+  }
+}
 
 
 @media (min-width: 700px) {
