--- a/src/CSS/Nav.css
+++ b/src/CSS/Nav.css
@@ -26,23 +26,12 @@
    .li:hover {
     color: gold;
   }
+  .H2{
+    color:#fcdeb7;
+  }
+ 
+  
 
-  .H2 {
-    font-family: Italiana;
-    font-size: 1.2rem;
-    margin-top: 3%;
-    font-style: italic;
-    color: #fad6a5;
-    font-weight: 500;
-  }
-  
-  .nav {
-    text-align: center;
-  }
-  
-  .carmslogo {
-    height: 15vh;
-  }
 
   @media (min-width: 700px) {
     .nav {
