--- a/src/CSS/Reservations.css
+++ b/src/CSS/Reservations.css
@@ -55,7 +55,7 @@
     color: #F0EAD6;
     text-align: center;
     font-family: Italiana, serif;
-    font-weight:bold;
+    font-weight:500;
     font-style: italic;
     margin-top: 4%;
     line-height: 1.8rem;
