--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Italianno&display=swap");
 
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
