--- a/src/CSS/Dinner.css
+++ b/src/CSS/Dinner.css
@@ -1,19 +1,24 @@
+.background {
+  background-repeat: no-repeat cover;
+  background-size: cover;
+  height: 350vh !important;
+}
+
+
+
+
 .dinner-header {
-    margin-top: 5%;
     text-align: center;
-    font-family: Italianno;
-    font-weight: bold;
-    font-size: 4rem;
-    color: #e2725b;
+    font-family: Italianno serif;
+    font-weight: 500;
+    font-size: 3rem;
+     
   }
+
+
   
-  .background {
-    background-repeat: no-repeat cover;
-    background-size: cover;
-    height: 290vh;
-  }
   
-  .section {
+  .item-section {
     font-family: Italiana, serif;
     font-weight: bold;
     font-style: italic;
@@ -21,105 +26,39 @@
     color: #fadeb6;
     text-align: center;
     margin-top: 3%;
+  
   }
   
   .item {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-align: center;
     margin-top: 2%;
     color: #8b0000;
     font-weight: bold;
+    font-family:Roboto, serif;
+    font-style: italic;
+    text-shadow: 2px 2px black;
+    
   }
   
   .item-description {
-    font-family: Italiana;
+    font-family:roboto serif;
     font-weight: bold;
     font-size: 1rem;
     color: white;
+    text-shadow: 2px 2px black;
     text-align: center;
     margin-top: 1%;
   }
-  
-  @media (min-width: 700px) {
-
-    .item-section {
-      font-family: Italiana, serif;
-      font-weight: bold;
-      font-style: italic;
-      font-size: 1.8rem;
-      color: #fadeb6;
-      text-align: center;
-      margin-top: 3%;
-    }
-
-    .background{
-      height:200vh;
-    }
-
-    .item{
-      margin-top:8%;
-    }
-    .meal{
-      color:#e6c436;
-      margin-top:8%;
-    }
+  .meal{
+    margin-top:4%;
+    font-size:1.5rem;
+    text-align: center;
+    color:#e2725b;
+    font-family: Roboto serif;
   }
+
   
-  @media(min-width:992px) {
-   
-    .background {
-      height: 500vh;
-    }
+ 
   
-    .section {
-      font-family: Italiana, serif;
-      font-weight: bold;
-      font-style: italic;
-      font-size: 1.8rem;
-      color: #fadeb6;
-      text-align: center;
-      margin-top: 3%;
-    }
-  
-    .item {
-      font-size: 1.5rem;
-      text-align: center;
-      margin-top: 2%;
-      color: #8b0000;
-      font-weight: bold;
-    }
-  }
-  
-  @media(min-width:1392px) {
-  
-    .background{
-        height:280vh;
-    }
-  
-    .meal{
-      font-size:2.2rem;
-      margin-top:4%;
-    }
-  
-    .item-section{
-      font-size:2.6rem !important;
-    }
-    
-  
-  
-    .item-description{
-      font-size:1.2rem;
-    }
-    .meal{
-      font-size:2.2rem;
-      margin-top:4%;
-    }
-    .item{
-      font-size:2rem;
-    }
-  
-    .item-description{
-      font-size:1.2rem;
-    }
-  }
   
