--- a/src/CSS/Reservations.css
+++ b/src/CSS/Reservations.css
@@ -1,9 +1,5 @@
-.background {
-  background-repeat: no-repeat cover;
-  background-size: cover;
-  height: 290vh;
-}
-.reservation-form input {
+
+.input {
     display: flex column;
     justify-content: center;
     align-items: center;
@@ -16,14 +12,7 @@
     max-height: 15vh;
     margin-top: 5%;
   }
-  .dinner-header {
-    margin-top: 5%;
-    text-align: center;
-    font-family: Italianno;
-    font-weight: bold;
-    font-size: 4rem;
-    color: #e2725b;
-  }
+
   .container {
     background-repeat: no-repeat cover;
     background-size: cover;
@@ -39,7 +28,7 @@
     width: 100%;
   }
   
-  input {
+  .input {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -69,6 +58,7 @@
     justify-content: center;
     margin: 1%;
     font-weight: bold;
+    font-family:Roboto serif;
   }
   
   .div-button {
@@ -78,14 +68,14 @@
     margin-top: 4%;
   }
   
-  .div-button button {
+  .div-button .btn {
     padding: 22px 100px;
     border-radius: 15px;
     background: #e2725b;
     opacity: 0.7;
     color: beige;
   }
-  .div-button button:hover {
+  .div-button .btn:hover {
     background: beige;
     color: #e2725b;
   }
@@ -98,18 +88,102 @@
     background-color: #f7e7ce;
   }
 
-  @media(min-width:992px){
+  @media (max-width:660px) {
+    
+.container{
+  height:90vh;
+}
+.reservations {
+  font-size: 2.5rem;
+  text-align: center;
+  font-weight: bold;
+  font-family: Italianno;
+  max-height: 15vh;
+  margin-top: 5%;
+}
+  .paragraph{
+    font-size: 1.1rem !important;
 
-    .background {
-      background-repeat: no-repeat cover;
-      background-size: cover;
-      height: 290vh;
+  }
+
+
+.input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 45%;
+  height: 5vh;
+}
+
+
+
+label {
+  color: #f5f5dc;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  margin: 1%;
+  font-weight: bold;
+}
+
+.div-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4%;
+}
+
+ .btn {
+  padding: 22px 36px !important;
+  border-radius: 15px;
+  background: #e2725b;
+  opacity: 0.7;
+  color: beige;
+  margin-top:4%;
+}
+
+.parag {
+  font-size: 2rem;
+  font-weight: 500;
+  font-family: Italianno;
+  text-align: center;
+
+  background-color: #f7e7ce;
+}
+    
+  }
+
+  @media(min-width:700px){
+
+    .paragraph{
+      font-size:1.4rem;
     }
+
+    label{
+      font-size:1.1rem;
+    }
+
+    .btn{
+      padding: 22px 64px;
+    }
+
+    .container{
+      height:90vh;
+    }
+
+
+  }
+
+    @media(min-width:992px){
+
+  
     .paragraph {
       font-size: 2.1rem;
-      color:black;
       text-align: center;
-      font-family: Italiana, serif;
+      font-family: roboto, serif;
       font-weight: 500;
       font-style: italic;
       margin-top: 4%;
@@ -133,6 +207,26 @@
   
     
   }
+  
+  @media (min-width:1392px) {
 
+    label{
+      font-size:1.3rem !important;
+      text-shadow: 0px 2px 0px black!important
+    }
+
+    .container{
+      height:100vh;
+    }
+
+    .input{
+      width:25% !important;
+    }
+
+    .btn{
+      padding: 24px 120px !important;
+    }
+
+  }
 
 
