--- a/src/CSS/Winelist.css
+++ b/src/CSS/Winelist.css
@@ -1,3 +1,4 @@
+  
 .wine-section{
     background-size: cover; 
     background-repeat: no-repeat;
@@ -26,11 +27,47 @@
     
 }
 
-.ant-table-thead th{
-    color:#DAA520;
-    margin:auto;
+.ant-table-thead .ant-table-cell {
+    color:beige;
+    text-shadow:0px 1px 1px black;
+    display:flex column;
+    justify-content:space-between;
+
+
+}
+
+table{
+    margin:0 !important;
+    display:flex column;
+    justify-content:space-around !important;
+}
+
+
+.ant-table-content table{
+    margin:0 !important;
 }
 
 
 
 
+.ant-table-container{
+    margin:0;
+    width:100%;
+}
+
+.ant-table-tbody{
+    display:flex column;
+    justify-content:space-around;
+    
+}
+
+.ant-table-tbody{
+    padding: 0 !important;
+  }
+  .ant-table-tbody  > tr > td{
+    padding: 0 !important;
+  }
+
+.ant-table{
+    margin:0 !important;
+}
