--- a/src/CSS/Winelist.css
+++ b/src/CSS/Winelist.css
@@ -1,8 +1,8 @@
   
 .wine-section{
     background-size: cover; 
-    background-repeat: no-repeat;
-    height:180vh;
+    background-repeat:repeat;
+    height:240vh;
     margin-top:4%;
 
 }
@@ -27,33 +27,21 @@
     
 }
 
-.ant-table-thead .ant-table-cell {
-    color:beige;
-    text-shadow:0px 1px 1px black;
-    display:flex column;
-    justify-content:space-between;
 
+
+.wine-table{
+    
+    margin-top:4%;
 
 }
 
-table{
-    margin:0 !important;
-    display:flex column;
-    justify-content:space-around !important;
-}
-
-
-.ant-table-content table{
-    margin:0 !important;
+td{
+    padding:5px;
 }
 
 
 
 
-.ant-table-container{
-    margin:0;
-    width:100%;
-}
 
 .ant-table-tbody{
     display:flex column;
@@ -61,13 +49,9 @@ table{
     
 }
 
-.ant-table-tbody{
-    padding: 0 !important;
-  }
-  .ant-table-tbody  > tr > td{
-    padding: 0 !important;
-  }
-
-.ant-table{
-    margin:0 !important;
+.ant-table-cell{
+    display:flex column;
+    justify-content:space-evenly;
+    width:15%;
+    color:#ffffff;
 }
